--- a/app-tasks/package.json
+++ b/app-tasks/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^0.8.3",
     "@types/node": "^18.17.3",
     "json-server": "^0.17.3",
     "nuxt": "^3.6.5",
